proyecto de tasks con todos los endpoints